src/objects/MICO_Bug__c.object
<CustomObject>
    <description>Business Description: This object is used to track defects (bugs) from being raised to resolved or rejected

Used In: Mission Control App</description>
    <fields>
        <fullName>BusinessImpact__c</fullName>
        <inlineHelpText>Critical - Stops user from completing critical business process (CBP)
Major - CBP can be mostly be completed but inefficient. Some processes cannot be completed.
Medium - Process is hindered but can be completed
Minor - Slight inconvenience to user</inlineHelpText>
        <label>Business Impact</label>
        <picklist>
            <picklistValues>
                <fullName>5-Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-High</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2-Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Comments and notes can be used by developers, testers and managers to record comments, questions etc about issues. You should never overwrite others comments but should add yours to the top of the comment section, followed by your name.</inlineHelpText>
        <label>Comments / notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <formula>User_Story__r.Developer__r.FirstName +&quot; &quot;+User_Story__r.Developer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The developer who built the original user story.</inlineHelpText>
        <label>Original Developer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Reference__c</fullName>
        <label>Duplicate Reference</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <externalId>true</externalId>
        <label>External Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fix_in_Environment__c</fullName>
        <inlineHelpText>What environments (SFDC) or Code Base (Flex)  has this been fixed in?</inlineHelpText>
        <label>Fixed in</label>
        <picklist>
            <picklistValues>
                <fullName>Silver DVL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver DevPack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver SAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold DevPack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold DVL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold SAT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Log_Time__c</fullName>
        <label>Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logged_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate this if this defect required a new user story. Link to the new user story here.</description>
        <inlineHelpText>Populate this if this defect required a new user story. Link to the new user story here.</inlineHelpText>
        <label>New User Story</label>
        <referenceTo>MICO_User_Story__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>MICO_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planned Release</label>
        <referenceTo>MICO_Release__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>MICO_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MavensPM__Project__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>MICO_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>User_Story__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Comment__c</fullName>
        <inlineHelpText>Elements which have to be deployed in a manual way.
Please add the necessary level of detail.</inlineHelpText>
        <label>Release Steps (Manual)</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Completeness_Indicator__c</fullName>
        <formula>IMAGE( 
             IF ( Release_Completeness__c, &quot;/img/msg_icons/confirm16.png&quot;, &quot;/img/msg_icons/error16.png&quot;), 
            IF ( Release_Completeness__c, &quot;Completed OK&quot;,&quot;Information is missing&quot;),
            16,
            16
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Has the release document been completed appropriately. 
All required sections in the release</inlineHelpText>
        <label>Release Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Completeness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Completeness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Steps_Automated__c</fullName>
        <inlineHelpText>Elements which have to be deployed in an automated way (Eclipse).</inlineHelpText>
        <label>Release Steps (Automated)</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Script_Number__c</fullName>
        <inlineHelpText>If this bug was raised when running a script, please note the script number here</inlineHelpText>
        <label>Script Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>MICO_Sprint__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>MICO_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <formula>User_Story__r.Allocated_Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Raised</fullName>
                <color>#000000</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Triaged</fullName>
                <color>#333333</color>
            </picklistValues>
            <picklistValues>
                <fullName>Parked</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>For Discussion</fullName>
                <color>#999999</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Development</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>In development</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for testing</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked from testing</fullName>
                <color>#993399</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for sign-off</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Complete</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Consolidated</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - New User Story Required</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - New User Story Created</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Rejected</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Unreplicable</fullName>
                <color>#006600</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC/Veeva</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Informatica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Test_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Execution</label>
        <referenceTo>MICO_Test__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>MICO_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <inlineHelpText>The phase of testing this bug was raised in.

For January testing this will either be System 1 or System 2</inlineHelpText>
        <label>Test Phase</label>
        <picklist>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Regression</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>MICO_User_Story__c</referenceTo>
        <relationshipLabel>Defects (User Story)</relationshipLabel>
        <relationshipName>MICO_Story_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Steps__c</fullName>
        <inlineHelpText>Add the steps that should be executed when validating the change in the UI
Example: Field X was added to the object</inlineHelpText>
        <label>Validation Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <inlineHelpText>Add the SVN revision number of the elements (SFDC)</inlineHelpText>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X0_All_Defects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Defect_Developer__c</columns>
        <columns>Logged_By__c</columns>
        <columns>Problem__c</columns>
        <columns>BusinessImpact__c</columns>
        <columns>Technology__c</columns>
        <columns>External_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>0) All Defects</label>
    </listViews>
    <listViews>
        <fullName>X1_All_Completed_Sprint1_Defects</fullName>
        <columns>NAME</columns>
        <columns>Defect_Developer__c</columns>
        <columns>Fix_in_Environment__c</columns>
        <columns>Release_Steps_Automated__c</columns>
        <columns>Release_Comment__c</columns>
        <columns>Validation_Steps__c</columns>
        <columns>Version__c</columns>
        <columns>Release_Completeness__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Complete</value>
        </filters>
        <label>2) All Completed Sprint 1 Defects</label>
    </listViews>
    <listViews>
        <fullName>X1_All_Open_Defects</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Defect_Developer__c</columns>
        <columns>Logged_By__c</columns>
        <columns>Problem__c</columns>
        <columns>Status__c</columns>
        <columns>BusinessImpact__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>,Raised,Triaged,Parked,For Discussion,Ready for Development,In development</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for testing</value>
        </filters>
        <label>1) All Open Defects</label>
    </listViews>
    <nameField>
        <displayFormat>DEF-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>